--- a/app/views/ftf/claim/v3-0/check.html
+++ b/app/views/ftf/claim/v3-0/check.html
@@ -25,8 +25,13 @@
 
 
     <span class="govuk-caption-xl">Claim for a Water Management Grant</span>
+    {% if (data['progress'] == "submitted") %}
+    <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Your claim files</h1>
+    <span class="govuk-body">Files you submitted for this claim.</span>
+    {% else %}
     <h1 class="govuk-heading-xl" style="margin-bottom: 20px;">Check your claim files</h1>
     <span class="govuk-body">Review your files before submitting your claim.</span>
+    {% endif %}
 
 <br><br><br>
 
@@ -42,11 +47,13 @@
           <dd class="govuk-summary-list__value">
             Claim 1 - Water management.docx , 100KB
           </dd>
+          {% if (data['progress'] == "submitted") %}{% else %}
           <dd class="govuk-summary-list__actions">
             <a class="govuk-link" href="upload4.html#form">
               Change<span class="govuk-visually-hidden"> name</span>
             </a>
           </dd>
+          {% endif %}
         </div>
       </dl>
         
@@ -66,11 +73,13 @@
               Reservoir seal - invoice.pdf , 3MB<br>
               Reservoir clips - invoice.pdf , 3MB 
             </dd>
+            {% if (data['progress'] == "submitted") %}{% else %}
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="upload4.html#financial-evidence-section">
                 Change<span class="govuk-visually-hidden"> name</span>
               </a>
             </dd>
+            {% endif %}
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
@@ -82,11 +91,13 @@
               Reservoir seal.jpg , 2MB<br>
               Reservoir clips.mp4 , 12MB
             </dd>
+            {% if (data['progress'] == "submitted") %}{% else %}
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="upload4.html#visual-evidence-section">
                 Change<span class="govuk-visually-hidden"> date of birth</span>
               </a>
             </dd>
+            {% endif %}
           </div>
           
           <div class="govuk-summary-list__row">
@@ -96,6 +107,7 @@
             <dd class="govuk-summary-list__value">
               (No files added)
             </dd>
+            {% if (data['progress'] == "submitted") %}{% else %}
             <dd class="govuk-summary-list__actions">
               <ul class="govuk-summary-list__actions-list">
                   <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" href="upload4.html#outcomes-evidence-section">
@@ -103,6 +115,7 @@
                   </a></li>
               </ul>
             </dd>
+            {% endif %}
           </div>
         </dl>
 
