FTF Activity List Status block content amends

--- a/app/views/ftf/_includes/activity-list_status-block.html
+++ b/app/views/ftf/_includes/activity-list_status-block.html
@@ -2,14 +2,14 @@
 
 <h3 class="govuk-heading-m">Expression of interest in progress</h3>
 <div class="govuk-inset-text">
-    Expression of interest closes 11:59pm on <strong>31 January 2024</strong>
+    Expression of interest closes 11:59pm on <strong>31 January 2024</strong>.
 </div>
 
 {% elif (data['status'] == "01b") %}
 
 <h3 class="govuk-heading-m">Expression of interest under review</h3>
 <div class="govuk-inset-text">
-    RPA should complete the review by <strong>28 February 2024</strong>
+    RPA should complete the review by <strong>28 February 2024</strong>.
 </div>
 
 
@@ -22,9 +22,9 @@
 {% elif (data['status'] == "02a") %}
 <!-- EOI approved, application ready to start -->
 
-<h3 class="govuk-heading-m">You can start your application.</h3>
+<h3 class="govuk-heading-m">You can start your application</h3>
 <div class="govuk-inset-text">
-    Application deadline is 11:59pm on <strong>31 March 2024</strong>
+    Application deadline is 11:59pm on <strong>31 March 2024</strong>.
 </div>
 
 
@@ -33,7 +33,7 @@
 
 <h3 class="govuk-heading-m">Application in progess</h3>
 <div class="govuk-inset-text">
-    Application deadline is 11:59pm on <strong>31 March 2024</strong>
+    Application deadline is 11:59pm on <strong>31 March 2024</strong>.
 </div>
 
 
@@ -43,7 +43,7 @@
 
 <h3 class="govuk-heading-m">Application under review</h3>
 <div class="govuk-inset-text">
-    RPA should complete the review by <strong>30 April 2024</strong>
+    RPA should complete the review by <strong>30 April 2024</strong>.
 </div>
 
 
@@ -51,7 +51,7 @@
 <!-- Application under review -->
 
 <h3 class="govuk-heading-m">Application unsuccessful</h3>
-<p class="govuk-body">Your <a href="">application outcome</a> explains in detail why your project was not successful.</p>
+<p class="govuk-body">Your <a href="">application outcome</a> explains why your project was not successful.</p>
 
 
 {% elif (data['status'] == "03") %}
@@ -59,7 +59,7 @@
 
 <h3 class="govuk-heading-m">Read and sign your grant funding agreement</h3>
 <div class="govuk-inset-text">
-    Your agreement offer will expire at 11:59pm on <strong>31 May 2024</strong>
+    Your agreement offer will expire at 11:59pm on <strong>31 May 2024</strong>.
 </div>
 
 
@@ -69,7 +69,7 @@
 
 <h3 class="govuk-heading-m">You can submit your first claim</h3>
 <div class="govuk-inset-text">
-    Your claim is due by 11:59pm on <strong>31 May 2025</strong>
+    Your claim is due by 11:59pm on <strong>31 May 2025</strong>.
 </div>
 
 
@@ -78,7 +78,7 @@
 
 <h3 class="govuk-heading-m">You can submit your second claim</h3>
 <div class="govuk-inset-text">
-    Your claim is due by 11:59pm on <strong>31 August 2025</strong>
+    Your claim is due by 11:59pm on <strong>31 August 2025</strong>.
 </div>
 
 
@@ -87,7 +87,7 @@
 
 <h3 class="govuk-heading-m">You can submit your third claim</h3>
 <div class="govuk-inset-text">
-    Your claim is due by 11:59pm on <strong>31 November 2025</strong>
+    Your claim is due by 11:59pm on <strong>31 November 2025</strong>.
 </div>
 
 {% endif %}
