--- a/app/views/index.html
+++ b/app/views/index.html
@@ -60,7 +60,7 @@
           <li><a href="/ftf/activity-list/v3-0/index?status=02a&eoi=03b&apply=02a&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">You can start application (EOI accepted)</a></li>
           <li><a href="/ftf/activity-list/v3-0/index?status=02b&eoi=03b&apply=02c&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">Application in progress</a></li>
           <li><a href="/ftf/activity-list/v3-0/index?status=02c&eoi=03b&apply=03a&agree=01&claim-01=01&claim-02=0&claim-03=0" target="_blank">Application under review</a></li>
-          <li><a href="/ftf/activity-list/v3-0/index?status=02d&eoi=03c&apply=03c&agree=0&claim-01=0&claim-02=0&claim-03=0" target="_blank">Application unsuccessful</a></li>
+          <li><a href="/ftf/activity-list/v3-0/index?status=02d&eoi=03b&apply=03c&agree=0&claim-01=0&claim-02=0&claim-03=0" target="_blank">Application unsuccessful</a></li>
         </ul>
 
         <p class="govuk-body">Agreement phase:</p>
