FETF Activity List first draft

--- a/app/views/ftf/_includes/activity-list_status-block.html
+++ b/app/views/ftf/_includes/activity-list_status-block.html
@@ -51,7 +51,7 @@
 <!-- Application under review -->
 
 <h3 class="govuk-heading-m">Application unsuccessful</h3>
-<p class="govuk-body">Your <a href="">application outcome</a> explains why your project was not successful.</p>
+<!-- <p class="govuk-body">Your <a href="">application outcome</a> explains why your project was not successful.</p> -->
 
 
 {% elif (data['status'] == "03") %}
