--- a/app/views/ftf/_includes/activity-list_task-section_apply.html
+++ b/app/views/ftf/_includes/activity-list_task-section_apply.html
@@ -372,7 +372,7 @@
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Your application outcome</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Application outcome</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-1-status">
           Successful
@@ -425,7 +425,7 @@
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Your application outcome</a>
+          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-details-2-status">Application outcome</a>
         </div>
         <div class="govuk-task-list__status" id="application-details-1-status">
           Unsuccessful
