Updates to activity lists

--- a/app/views/ftf/agreement/v2-0/index2.html
+++ b/app/views/ftf/agreement/v2-0/index2.html
@@ -159,7 +159,7 @@
             You must read and accept the agreement by 11:59pm on <strong>31 May 2024</strong> or the offer will expire and we cannot award you a grant.<br><br>
             
 
-              <a href="activity">Read and accept your grant funding agreement</a>
+              <a href="activity?03-02=ready">Read and accept your grant funding agreement</a>
 
               <br><br>
                         
@@ -169,7 +169,7 @@
 
               <strong>Withdrawing your application</strong><br><br>
 
-              If you do not want to accept your agreement, you should <a href="activity1">withdraw your application</a>.<br>
+              If you do not want to accept your agreement, you should <a href="/_common/not-testing.html">withdraw your application</a>.<br>
 
 
            <hr style="margin: 30px 0;">
