--- a/app/views/ftf/application/v3-0/check.html
+++ b/app/views/ftf/application/v3-0/check.html
@@ -162,7 +162,7 @@
 
 <br><br>
 
-      <a href="activity3">
+      <a href="activity3?02-04=ready">
         <button class="govuk-button" data-module="govuk-button">
           Continue
         </button>
