--- a/app/views/ftf/application/v3-0/confirmation.html
+++ b/app/views/ftf/application/v3-0/confirmation.html
@@ -111,7 +111,7 @@
 
 
        <p class="govuk-body">
-        <a href="/_common/not-testing.html">Go back to the task list</a></p>
+        <a href="activity4">Go back to the task list</a></p>
        </p>
 
        
