--- a/app/views/ftf/application/v3-0/index.html
+++ b/app/views/ftf/application/v3-0/index.html
@@ -184,7 +184,7 @@
 
               <br>
 
-              <a href="activity1">Download the Word application form and Excel appendix</a>
+              <a href="activity1?02-01=ready">Download the Word application form and Excel appendix</a>
 
               <br><br>
                         
