--- a/app/views/ftf/claim/v3-0/activity1b.html
+++ b/app/views/ftf/claim/v3-0/activity1b.html
@@ -175,7 +175,7 @@
             </li>
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="#" aria-describedby="eligibility-status">
+                <a href="/_common/not-testing.html" aria-describedby="eligibility-status">
                   Upload claim form and evidence
                 </a>
               </span>
