--- a/app/views/ftf/claim/v3-0/index.html
+++ b/app/views/ftf/claim/v3-0/index.html
@@ -167,7 +167,7 @@
 
               <br><br>
 
-              <a href="activity1">Download claim form</a>
+              <a href="activity1?04-01=ready">Download claim form</a>
 
               <br><br>
                         
