--- a/app/views/ftf/eoi/v2-0/activity3.html
+++ b/app/views/ftf/eoi/v2-0/activity3.html
@@ -55,6 +55,14 @@ Water Management Grant - Round 3
         </span>
         <strong class="govuk-tag govuk-prototype-kit-task-list__tag" id="eligibility-status">Completed</strong>
       </li>
+
+      <li class="govuk-prototype-kit-task-list__item">
+        <span class="govuk-prototype-kit-task-list__task-name">
+            Expression of interest outcome
+        </span>
+        <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">In progress</strong>
+      </li>
+
     </ul>
   </li>
 
