--- a/app/views/ftf/application/v3-0/activity4.html
+++ b/app/views/ftf/application/v3-0/activity4.html
@@ -122,7 +122,7 @@
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="#" aria-describedby="read-declaration-status">
+                <a href="upload10?10=complete" aria-describedby="read-declaration-status">
                   Upload application forms and evidence
                 </a>
               </span>
@@ -140,7 +140,7 @@
 
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                <a href="#" aria-describedby="read-declaration-status">
+                <a href="confirmation" aria-describedby="read-declaration-status">
                   Submit application
                 </a>
               </span>
@@ -154,7 +154,7 @@
               <span class="govuk-prototype-kit-task-list__task-name">
                 Application outcome
               </span>
-              <strong class="govuk-tag govuk-tag--blue govuk-prototype-kit-task-list__tag" id="list-convictions-status">In progress</strong>            </li>
+              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">In progress</strong>
 
 
           </ul>
