--- a/app/views/ftf/claim/v3-0/activity4.html
+++ b/app/views/ftf/claim/v3-0/activity4.html
@@ -193,7 +193,7 @@
               <span class="govuk-prototype-kit-task-list__task-name">
                   Your claim outcome
               </span>
-              <strong class="govuk-tag govuk-tag--blue govuk-prototype-kit-task-list__tag" id="contact-details-status">In progress</strong>
+              <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">In progress</strong>
             </li>
           </ul>
         </li>
