--- a/app/views/ftf/claim/v3-0/download.html
+++ b/app/views/ftf/claim/v3-0/download.html
@@ -44,7 +44,7 @@
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
+        <span class="govuk-warning-text__assistive"></span>
         Do not upload scanned copies or PDFs of the claim form.
       </strong>
     </div>
