--- a/app/views/ftf/application/v3-0/confirmation.html
+++ b/app/views/ftf/application/v3-0/confirmation.html
@@ -72,7 +72,7 @@
         <div class="govuk-warning-text">
           <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
           <strong class="govuk-warning-text__text">
-            <span class="govuk-warning-text__assistive">Warning</span>
+            <span class="govuk-warning-text__assistive"></span>
             You must not start the project
           </strong>
         </div>
