--- a/app/views/ftf/claim/v3-0/activity4.html
+++ b/app/views/ftf/claim/v3-0/activity4.html
@@ -191,7 +191,7 @@
             </li>
             <li class="govuk-prototype-kit-task-list__item">
               <span class="govuk-prototype-kit-task-list__task-name">
-                  Your claim outcome
+                  Claim outcome
               </span>
               <strong class="govuk-tag govuk-tag--grey govuk-prototype-kit-task-list__tag" id="list-convictions-status">In progress</strong>
             </li>
