FETF Activity List title edits

--- a/app/views/fetf/activity-list/v2-0/index.html
+++ b/app/views/fetf/activity-list/v2-0/index.html
@@ -16,8 +16,10 @@ Water Management Grant - Round 3
 
 
 
-<span class="govuk-caption-xl">{{ data['fetf-project-reference'] }}</span>
-<h1 class="govuk-heading-xl">{{ data['fetf-grant-name'] }}</h1>
+<span class="govuk-caption-xl">{{ data['fetf-grant-type'] }}
+  {% if (data['fetf-status'] == "01c") or (data['fetf-status'] == "01d") or (data['fetf-status'] == "02") or (data['fetf-status'] == "03") %} ({{ data['fetf-project-reference'] }}){% endif %}
+</span>
+<h1 class="govuk-heading-xl">{{ data['fetf-grant-title'] }}</h1>
 
 
 <span class="content-section">
