--- a/app/views/fetf/_includes/activity-list_status-block.html
+++ b/app/views/fetf/_includes/activity-list_status-block.html
@@ -3,7 +3,7 @@
 
 <h3 class="govuk-heading-m">You can start your application</h3>
 <div class="govuk-inset-text">
-    Application deadline is 11:59pm on <strong>31 January 2024</strong>.
+    Round 1 closes at 11.59pm on <strong>7 July 2024</strong>.
 </div>
 
 
@@ -12,7 +12,7 @@
 
 <h3 class="govuk-heading-m">Application in progess</h3>
 <div class="govuk-inset-text">
-    Application deadline is 11:59pm on <strong>31 January 2024</strong>.
+    Round 1 closes at 11.59pm on <strong>7 July 2024</strong>.
 </div>
 
 
