Small change to warning text

--- a/app/views/ftf/claim/v3-0/submit.html
+++ b/app/views/ftf/claim/v3-0/submit.html
@@ -48,7 +48,7 @@
       <div class="govuk-warning-text">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
-          <span class="govuk-warning-text__assistive">Warning</span>
+          <span class="govuk-warning-text__assistive"></span>
           If you knowingly or recklessly make a false statement to obtain payments to yourself or others, you risk prosecution, termination of any resulting agreement, and recovery of any monies paid to you under the scheme. You may be excluded from this scheme and from other financial assistance under the Agriculture Act 2020 for up to two years.
         </strong>
       </div>
