--- a/app/views/ftf/claim/v3-0/upload4.html
+++ b/app/views/ftf/claim/v3-0/upload4.html
@@ -35,7 +35,7 @@
     <div class="govuk-warning-text">
       <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
       <strong class="govuk-warning-text__text">
-        <span class="govuk-warning-text__assistive">Warning</span>
+        <span class="govuk-warning-text__assistive"></span>
         Do not upload handwritten and scanned copies or PDFs of this form.
       </strong>
     </div>
