--- a/app/views/ftf/application/v3-0/check.html
+++ b/app/views/ftf/application/v3-0/check.html
@@ -37,7 +37,7 @@
 <h2 class="govuk-heading-l">Rural Payment Service details</h2>
 {% if (data['progress'] == "submitted") %}
 <p class="govuk-body">Details submitted as part of your application.</p>{% else %}
-<p class="govuk-body">Changes in this section will update your Rural Payments service account.</p>
+<p class="govuk-body">Changes in this section will update your Rural Payments Service account.</p>
 {% endif %}
     
 <br>
